[gd_scene load_steps=12 format=3 uid="uid://ch374t7yivpec"]

[ext_resource type="Script" path="res://Enemigo/tanque_0_golem.gd" id="1_8gboi"]
[ext_resource type="Texture2D" uid="uid://tprrst2w7wcv" path="res://Textures/Enemy/Golem/Golem_Run.png" id="2_fbujg"]
[ext_resource type="PackedScene" uid="uid://d6vbdqp0g70d" path="res://Utilidades/hurt_box.tscn" id="3_bo2ql"]
[ext_resource type="PackedScene" uid="uid://cb1vuqcjh3t5" path="res://Utilidades/hit_box.tscn" id="4_v4f6f"]
[ext_resource type="AudioStream" uid="uid://cakx84w2cw0ii" path="res://Audio/SoundEffect/enemy_hit.ogg" id="5_3pp0n"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lp36a"]
radius = 8.0
height = 20.0

[sub_resource type="Animation" id="Animation_4myim"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}

[sub_resource type="Animation" id="Animation_5v5k2"]
resource_name = "walk"
length = 0.4
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jr4rk"]
_data = {
"RESET": SubResource("Animation_4myim"),
"walk": SubResource("Animation_5v5k2")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xh27w"]
size = Vector2(27, 25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4l5ba"]
size = Vector2(19, 23)

[node name="tanque0golem" type="CharacterBody2D" groups=["enemigos"]]
collision_layer = 5
collision_mask = 5
motion_mode = 1
script = ExtResource("1_8gboi")
movement_speed = 30.0
hp = 50
knockback_recovery = 2.5
enemy_damage = 8

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -2)
texture = ExtResource("2_fbujg")
hframes = 4
frame = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0)
shape = SubResource("CapsuleShape2D_lp36a")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jr4rk")
}

[node name="HurtBox" parent="." instance=ExtResource("3_bo2ql")]
collision_layer = 4
collision_mask = 4
HurtBoxType = 1

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(-0.5, -0.5)
shape = SubResource("RectangleShape2D_xh27w")

[node name="HitBox" parent="." instance=ExtResource("4_v4f6f")]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2(-0.5, 0.5)
shape = SubResource("RectangleShape2D_4l5ba")

[node name="sound_hit" type="AudioStreamPlayer2D" parent="."]
position = Vector2(3, 3)
stream = ExtResource("5_3pp0n")
volume_db = -20.0

[node name="Label" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="HideTimer" type="Timer" parent="."]

[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]
[connection signal="timeout" from="HideTimer" to="." method="_on_hide_timer_timeout"]

[editable path="HurtBox"]
[editable path="HitBox"]
